# orbitals

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.claim-extractor.md  README.md  README.scope-guard-v2.md  README.scope-guard.md  pyproject.toml
.github/workflows/: claude-code-review.yaml  publish.yml
examples/scope-guard/: api.py  async_api.py  local.py  localbench.py
scripts/test-readme-examples/: 00-install-all.sh  01-readme-basic-quickstart.sh  02-vllm-quickstart.sh  04-vllm-input-format-dict.sh  07-vllm-batch-validate-per-conv-descs.sh  08-vllm-structured-ai-service-description.sh  11-serve-curl-batch-validate.sh  12-serve-api-client-sync.sh  README.md  lib-common.sh  lib.sh  run-all.sh
scripts/test-readme-examples/claim-extractor/: 00-install-all.sh  01-vllm-quickstart.sh  02-hf-quickstart.sh  03-vllm-input-format-string.sh  04-vllm-input-format-dict.sh  05-vllm-input-format-conversation.sh  06-vllm-structured-ai-service-description.sh  07-vllm-batch-extract-single-desc.sh  08-vllm-batch-extract-per-conv-descs.sh  09-serve-curl-extract.sh  10-serve-curl-batch-extract.sh  11-serve-curl-extract-conversation.sh  12-serve-api-client-sync.sh  13-serve-api-client-async.sh  README.md  lib.sh  run-all.sh
scripts/test-readme-examples/scope-guard/: 03-vllm-input-format-string.sh  05-vllm-input-format-multi-turn.sh  09-hf-quickstart.sh  (+6 more)
src/hf_pipeline/: claim_extractor.py  scope_guard.py  scope_guard_v2.py
src/orbitals/: types.py  utils.py
tests/: test_ai_service_description.py  test_api_backend_async.py  test_api_backend_sync.py  test_batch_validation.py  test_claim_extractor.py  test_claim_extractor_serving.py  test_cli.py  test_conversation_input.py  test_default_safety_principles.py  test_mlx_backend.py  test_model_mapping.py  test_public_api.py  test_scope_class.py  test_scope_guard_v2.py  test_serving.py
(+40 files in other folders)
