[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbitals"
version = "0.1.1"
description = "LLM Guardrails tailored to your Principles"
readme = "README.md"

requires-python = "==3.13"
license = { text = "Apache-2.0" }

authors = [
    { name = "Luigi Procopio", email = "luigi@principled-intelligence.com" },
    { name = "Edoardo Barba", email = "edoardo@principled-intelligence.com" },
]

keywords = []
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["pydantic>=2.0.0", "typer>=0.12.3", "requests", "aiohttp"]

[project.optional-dependencies]
serving = ["uvicorn>=0.29.0", "fastapi[standard]>=0.119.1"]
scope-guard-hf = [
    "transformers>=4.47.0,<5.0.0",
    "accelerate>=1.11.0",
    "nvidia-ml-py",
]
scope-guard-vllm = [
    "transformers>=4.47.0,<5.0.0",
    "vllm>=0.11.0,<0.13.0",
    "xgrammar",
    "nvidia-ml-py",
]
scope-guard-serve = ["orbitals[scope-guard-vllm]", "orbitals[serving]"]
scope-guard-all = [
    "orbitals[scope-guard-vllm]",
    "orbitals[scope-guard-hf]",
    "orbitals[scope-guard-serve]",
]

all = ["orbitals[scope-guard-all]"]

[project.scripts]
orbitals = "orbitals.cli.main:app"

[dependency-groups]
dev = ["ty==0.0.1a23", "ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["src/orbitals"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ty.src]
exclude = ["src/scripts/**", "examples/"]
